fix: 클래스명 명시적으로 변경