@@ -93,8 +93,8 @@ public class SecurityConfig {
 		log.debug("[+] corsConfigurationSource 등록");
 
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("*"));  // 나중에 프론트 출처만 허용해야함
-		configuration.setAllowedMethods(Arrays.asList("*"));
+		configuration.setAllowedOrigins(List.of("*"));  // 나중에 프론트 출처만 허용해야함
+		configuration.setAllowedMethods(List.of("*"));
 		configuration.setAllowedHeaders(List.of("*"));
 		configuration.setAllowCredentials(true);  //클라이언트가 쿠키나 인증 관련 헤더를 사용하여 요청을 할 수 있도록 허용
 
